Working on the key event condition editor

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -53,6 +53,8 @@
     <link rel="import" href="webcomponents/content/gameeditor-sceneeditor.html">
     <link rel="import" href="webcomponents/content/gameeditor-eventsheeteditor.html">
     <link rel="import" href="webcomponents/content/gameeditor-ruleeditor.html">
+
+    <link rel="import" href="webcomponents/content/gameeditor-keyeventcondition.html">
 </head>
 <body onload="main()">
 <div class="grid flexVertical">
@@ -103,11 +105,9 @@
 
 <script>
 
-    /*
     var theTab = document.getElementById("editortabbedpane");
-    theTab.addEventListener("ready", function (e) {
-        window.alert("lala");
-        theTab.clearAll();
+    //theTab.addEventListener("ready", function (e) {
+/*        theTab.clearAll();
 
         var theEditor1 = document.createElement("gameeditor-eventsheeteditor");
         theTab.addTab("Test", theEditor1);
@@ -117,8 +117,8 @@
 
         var theRule = document.createElement("gameeditor-ruleeditor");
         theRule.rulename().value = 'Test';
-        Polymer.dom(theEditor2).appendChild(theRule);
-    });*/
+        Polymer.dom(theEditor2).appendChild(theRule);*/
+    //});
 </script>
 
 </body>
