Fixed some bugs

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -107,7 +107,7 @@
 
     var theTab = document.getElementById("editortabbedpane");
     //theTab.addEventListener("ready", function (e) {
-/*        theTab.clearAll();
+       theTab.clearAll();
 
         var theEditor1 = document.createElement("gameeditor-eventsheeteditor");
         theTab.addTab("Test", theEditor1);
@@ -117,7 +117,7 @@
 
         var theRule = document.createElement("gameeditor-ruleeditor");
         theRule.rulename().value = 'Test';
-        Polymer.dom(theEditor2).appendChild(theRule);*/
+        Polymer.dom(theEditor2).appendChild(theRule);
     //});
 </script>
 
