--- a/gameengine-editor/src/main/webapp/webcomponents/content/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/content/gameeditor-ruleeditor.html
@@ -42,20 +42,15 @@
                 margin: 0.4em;
                 flex-grow: 1;
                 padding-right: 30px;
-                border: 10px solid;
-                border-image: url(puzzleleft.png);
-                border-image-slice: 40 70 40 40 fill;
-                border-image-repeat: repeat;
-            }
+
+                border-style: solid; border-width: 4px 34px 4px 3px; -moz-border-image: url(puzzleleft.png) 13 78 22 13 repeat stretch; -webkit-border-image: url(puzzleleft.png) 13 78 22 13 repeat stretch; -o-border-image: url(puzzleleft.png) 13 78 22 13 repeat stretch; border-image: url(puzzleleft.png) 13 78 22 13 fill repeat stretch;            }
 
             .actions {
                 flex-grow: 2;
                 margin: 0.4em;
-                border: 10px solid;
                 padding-left: 10px;
-                border-image: url(puzzleright.png);
-                border-image-slice: 35 35 35 75 fill;
-                border-image-repeat: repeat;
+
+                border-style: solid; border-width: 0px 0px 4px 38px; -moz-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; -webkit-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; -o-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; border-image: url(puzzleright.png) 7 17 11 71 fill repeat stretch;
             }
 
         </style>
