Working on better Electron integration

--- a/gameengine-editor/src/main/webapp/webcomponents/content/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/content/gameeditor-ruleeditor.html
@@ -19,6 +19,7 @@
 <link rel="import" href="../properteditor/gameeditor-selectpropertyeditor.html">
 <link rel="import" href="../properteditor/gameeditor-textfieldpropertyeditor.html">
 <link rel="import" href="gameeditor-keyeventcondition.html">
+<link rel="import" href="gameeditor-deletegameobjectinstanceaction.html">
 <link rel="import" href="gameeditor-objectcollisioncondition.html">
 <link rel="import" href="gameeditor-runluascriptaction.html">
 
