--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -60,7 +60,7 @@
 
     <link rel="import" href="bower_components/juicy-ace-editor/juicy-ace-editor.html">
 </head>
-<body onload="main()">
+<body>
 <div class="grid flexVertical">
     <div class="gridItem border-1 propertyEditor shrink width-3 min-width-3" id="objectEditor">
 
