--- a/gameengine-editor/src/main/webapp/preview.html
+++ b/gameengine-editor/src/main/webapp/preview.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <script type="text/javascript" charset="utf-8" src="pixi-min-4.0.0-rc3.js"></script>
+    <script type="text/javascript" charset="utf-8" src="pixi-min-4.0.0.js"></script>
     <script type="text/javascript" charset="utf-8" src="howler.core.min-2.0.0.js"></script>
     <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
