--- a/gameengine-editor/src/main/webapp/webcomponents/tree/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/tree/shared-styles.html
@@ -64,6 +64,12 @@
                 vertical-align: middle;
             }
 
+            .deletebutton {
+                vertical-align: middle;
+                float: right;
+                visibility: hidden;
+            }
+
         </style>
     </template>
 </dom-module>
