--- a/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
@@ -39,6 +39,12 @@
                 line-height: 1.6em;
                 vertical-align: middle;
             }
+
+            .deletebutton {
+                vertical-align: middle;
+                float: right;
+                visibility: hidden;
+            }
         </style>
     </template>
 </dom-module>
