Added context menu support

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -51,6 +51,7 @@
 
     <link rel="import" href="webcomponents/global/gameeditor-separator.html">
     <link rel="import" href="webcomponents/global/gameeditor-tabbedpane.html">
+    <link rel="import" href="webcomponents/global/gameeditor-contextmenu.html">
 
     <link rel="import" href="webcomponents/content/gameeditor-sceneeditor.html">
     <link rel="import" href="webcomponents/content/gameeditor-eventsheeteditor.html">
