Working on web editor

--- a/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
@@ -53,6 +53,17 @@
                 visibility: hidden;
                 display: none;
             }
+
+            .contextmenuitem {
+                color: white;
+                font-family: 'Open Sans', sans-serif;
+                background-color: #4a5058;
+                padding: 0.1em;
+                padding-left: 0.3em;
+                height: 1.6em;
+                line-height: 1.6em;
+                vertical-align: middle;
+            }
         </style>
     </template>
 </dom-module>
