Added context menu support

--- a/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-contextmenuitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-contextmenuitem.html
@@ -18,7 +18,7 @@
 
 <dom-module id="gameeditor-contextmenuitem">
     <template>
-        <style include="global-shared-styles"/>
+        <style include="global-shared-styles"></style>
         <div class="contextmenuitem">{{text}}</div>
     </template>
     <script>
@@ -34,7 +34,6 @@
 
             ready: function() {
             }
-
         });
     </script>
 </dom-module>
