--- a/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/shared-styles.html
@@ -60,9 +60,15 @@
                 background-color: #4a5058;
                 padding: 0.1em;
                 padding-left: 0.3em;
+                padding-right: 0.3em;
                 height: 1.6em;
                 line-height: 1.6em;
                 vertical-align: middle;
+            }
+
+            .contextmenuitem:hover {
+                background-color: #b9bec4;
+                color: black;
             }
         </style>
     </template>
