--- a/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-contextmenu.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/global/gameeditor-contextmenu.html
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="gameeditor-contextmenuitem.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="gameeditor-contextmenu">
@@ -39,9 +40,8 @@
             }
         </style>
 
-        <div class="contextmenupopup">
+        <div id="menu" class="contextmenupopup">
             <div class="contextmenutitle">{{title}}</div>
-            <content id="content"></content>
         </div>
     </template>
     <script>
@@ -56,8 +56,16 @@
             },
 
             ready: function() {
-            }
+            },
 
+            attached: function() {
+
+                var theItems = this.$.menu;
+
+                this.getEffectiveChildren().forEach(function(item) {
+                    theItems.appendChild(item);
+                });
+            },
         });
     </script>
 </dom-module>
