--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/shared-styles.html
@@ -59,6 +59,12 @@
                 z-index: 99;
                 background-color: white;
             }
+
+            .deletebutton {
+                vertical-align: middle;
+                float: right;
+                visibility: hidden;
+            }
         </style>
     </template>
 </dom-module>
