--- a/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-textfieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/properteditor/gameeditor-textfieldpropertyeditor.html
@@ -20,7 +20,7 @@
     <template>
         <style include="property-shared-styles"></style>
         <div class="field">
-            <label for="inputfield">[[label]]</label>
+            <label for="inputfield">[[label]]<img id="deletebutton" class="deletebutton" src="close.png"></label>
             <input type="text" id="inputfield" name="inputfield" value="{{value}}" on-blur="updateData">
         </div>
     </template>
@@ -43,6 +43,12 @@
 
             updateData: function() {
                 this.value = this.$.inputfield.value;
+            },
+
+            addDeleteListener: function(aListener) {
+                this.$.deletebutton.style.display = 'inline';
+                this.$.deletebutton.style.visibility = 'visible';
+                this.$.deletebutton.addEventListener("click", aListener);
             },
 
             ready: function() {
